// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadForm expect to render 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormGroup
    fieldId="file"
    isRequired={true}
    label="Inventory data file"
    validated="default"
  >
    <Dropzone
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    fieldId="reportName"
    isRequired={true}
    label="Report name"
    validated="default"
  >
    <ForwardRef
      aria-describedby="Report name"
      id="reportName"
      isRequired={true}
      name="reportName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
      validated="default"
    />
  </FormGroup>
  <FormGroup
    fieldId="reportDescription"
    label="Report description"
    validated="default"
  >
    <ForwardRef
      aria-describedby="Report description"
      id="reportDescription"
      name="reportDescription"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
      validated="default"
    />
  </FormGroup>
  <FormGroup
    fieldId="yearOverYearGrowthRatePercentage"
    isRequired={true}
    label="Year-over-year growth rate for new hypervisors"
    validated="default"
  >
    <Grid
      md={3}
    >
      <GridItem>
        <InputGroup>
          <ForwardRef
            aria-describedby="Year-over-year growth rate for new hypervisors"
            className="pf-u-text-align-right"
            id="yearOverYearGrowthRatePercentage"
            isRequired={true}
            name="yearOverYearGrowthRatePercentage"
            onBlur={[MockFunction]}
            onChange={[Function]}
            type="number"
            validated="default"
          />
          <InputGroupText>
            %
          </InputGroupText>
        </InputGroup>
      </GridItem>
    </Grid>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    hasGutter={true}
  >
    <StackItem
      isFilled={false}
    >
      <label
        className="pf-c-form__label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Percentage of hypervisors migrated each year
        </span>
      </label>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        label="Year1"
        validated="default"
      >
        <Grid
          md={3}
        >
          <GridItem>
            <InputGroup>
              <ForwardRef
                aria-label="Percentage of hypervisors migrated on year 1"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear1"
                isRequired={true}
                name="percentageOfHypervisorsMigratedOnYear1"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
                validated="default"
              />
              <InputGroupText>
                %
              </InputGroupText>
            </InputGroup>
          </GridItem>
        </Grid>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear2"
        label="Year 2"
        validated="default"
      >
        <Grid
          md={3}
        >
          <GridItem>
            <InputGroup>
              <ForwardRef
                aria-label="Percentage of hypervisors migrated on year 2"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear2"
                isRequired={true}
                name="percentageOfHypervisorsMigratedOnYear2"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
                validated="default"
              />
              <InputGroupText>
                %
              </InputGroupText>
            </InputGroup>
          </GridItem>
        </Grid>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear3"
        label="Year 3"
        validated="default"
      >
        <Grid
          md={3}
        >
          <GridItem>
            <InputGroup>
              <ForwardRef
                aria-label="Percentage of hypervisors migrated on year 3"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear3"
                isRequired={true}
                name="percentageOfHypervisorsMigratedOnYear3"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
                validated="default"
              />
              <InputGroupText>
                %
              </InputGroupText>
            </InputGroup>
          </GridItem>
        </Grid>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup>
    <Button
      disabled={false}
      isDisabled={false}
      type="submit"
      variant="primary"
    >
      Create report
    </Button>
    <Button
      onClick={[MockFunction]}
      type="button"
      variant="secondary"
    >
      Cancel
    </Button>
  </ActionGroup>
</Form>
`;

exports[`UploadForm expect to render errors 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormGroup
    fieldId="file"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    label="Inventory data file"
    validated="error"
  >
    <Dropzone
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    fieldId="reportName"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    label="Report name"
    validated="error"
  >
    <ForwardRef
      aria-describedby="Report name"
      id="reportName"
      isRequired={true}
      name="reportName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
      validated="error"
    />
  </FormGroup>
  <FormGroup
    fieldId="reportDescription"
    helperTextInvalid="Field value invalid"
    label="Report description"
    validated="error"
  >
    <ForwardRef
      aria-describedby="Report description"
      id="reportDescription"
      name="reportDescription"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
      validated="error"
    />
  </FormGroup>
  <FormGroup
    fieldId="yearOverYearGrowthRatePercentage"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    label="Year-over-year growth rate for new hypervisors"
    validated="error"
  >
    <Grid
      md={3}
    >
      <GridItem>
        <InputGroup>
          <ForwardRef
            aria-describedby="Year-over-year growth rate for new hypervisors"
            className="pf-u-text-align-right"
            id="yearOverYearGrowthRatePercentage"
            isRequired={true}
            name="yearOverYearGrowthRatePercentage"
            onBlur={[MockFunction]}
            onChange={[Function]}
            type="number"
            validated="error"
          />
          <InputGroupText>
            %
          </InputGroupText>
        </InputGroup>
      </GridItem>
    </Grid>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    hasGutter={true}
  >
    <StackItem
      isFilled={false}
    >
      <label
        className="pf-c-form__label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Percentage of hypervisors migrated each year
        </span>
      </label>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        helperTextInvalid="Field value invalid"
        label="Year1"
        validated="error"
      >
        <Grid
          md={3}
        >
          <GridItem>
            <InputGroup>
              <ForwardRef
                aria-label="Percentage of hypervisors migrated on year 1"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear1"
                isRequired={true}
                name="percentageOfHypervisorsMigratedOnYear1"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
                validated="error"
              />
              <InputGroupText>
                %
              </InputGroupText>
            </InputGroup>
          </GridItem>
        </Grid>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear2"
        helperTextInvalid="Field value invalid"
        label="Year 2"
        validated="error"
      >
        <Grid
          md={3}
        >
          <GridItem>
            <InputGroup>
              <ForwardRef
                aria-label="Percentage of hypervisors migrated on year 2"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear2"
                isRequired={true}
                name="percentageOfHypervisorsMigratedOnYear2"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
                validated="error"
              />
              <InputGroupText>
                %
              </InputGroupText>
            </InputGroup>
          </GridItem>
        </Grid>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear3"
        helperTextInvalid="Field value invalid"
        label="Year 3"
        validated="error"
      >
        <Grid
          md={3}
        >
          <GridItem>
            <InputGroup>
              <ForwardRef
                aria-label="Percentage of hypervisors migrated on year 3"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear3"
                isRequired={true}
                name="percentageOfHypervisorsMigratedOnYear3"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
                validated="default"
              />
              <InputGroupText>
                %
              </InputGroupText>
            </InputGroup>
          </GridItem>
        </Grid>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup>
    <Button
      disabled={false}
      isDisabled={false}
      type="submit"
      variant="primary"
    >
      Create report
    </Button>
    <Button
      onClick={[MockFunction]}
      type="button"
      variant="secondary"
    >
      Cancel
    </Button>
  </ActionGroup>
</Form>
`;
